fix menu on firefox
https://app.asana.com/0/6091267150134/12978178422993

--- a/menu.less
+++ b/menu.less
@@ -107,6 +107,7 @@
 
   li {
     text-transform: uppercase;
+    overflow: hidden;
     margin: 3px 0;
     .proxima-nova-regular;
 
